# rust-crash-course

./: Cargo.toml  README.md
crates/actix-middleware/: Cargo.toml
crates/actix-middleware/src/: auth.rs  main.rs  mw.rs
crates/libweteka/: Cargo.toml
crates/rest/: Cargo.toml
crates/rest/src/: main.rs
crates/rest/src/middleware/: auth.rs  mod.rs  mw.rs
crates/rest/src/models/: user.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/models/: user.rs
crates/server/src/routes/: user.rs
crates/server/src/utils/: db.rs  id.rs  mod.rs
crates/weteka/: Cargo.toml
crates/weteka/src/: main.rs
