[package]
name = "actix-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures-util = "0.3.28"
futures = "0.3.28"
actix-web-lab = "0.19.1"
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
serde = "1.0.164"
serde_json = "1.0.96"
time = "0.3.22"
