[package]
name = "weteka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libweteka = { path = "../libweteka" }
# serde = "1.0.163"
# serde_json = "1.0.96"
serde={ version= "1.0.163", features=["derive"] }
serde_json = "*"